@@ -1,4 +1,15 @@
-﻿shmuel 18.09.2015 19:42:34 +0200 - build 528
+﻿shmuel 23.09.2015 19:34:14 +0200 - build 529
+
+1. LuaFAR + generic plugin:
+   a) При загрузке и перезагрузке стартового скрипта плагина ему передаётся один аргумент булевого типа:
+        true - при первой загрузке скрипта и при загрузке, вызванной значением _G.RecreateLuaState.
+        false - при перезагрузке скрипта, вызванной значением far.ReloadDefaultFile.
+   b) Отменяется установка _G.IsLuaStateRecreated = true перед перезагрузкой, вызванной значением
+      _G.RecreateLuaState (в этом более нет надобности, в связи с пунктом "a").
+
+2. LuaMacro: косметическая правка в плагине, связанная с пунктом "1".
+
+shmuel 18.09.2015 19:42:34 +0200 - build 528
 
 1. Уточнение 526.
 
